// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Inputs/Dropdown Multi Select 1`] = `
<div
  className="relative"
>
  <div
    className="space-y-2"
  >
    <label
      className="mr-2 inline uppercase text-bold-body-300"
      data-headlessui-state=""
      data-testid="txt"
      id="headlessui-listbox-label-:rq:"
      onClick={[Function]}
    >
      Drop down label 
    </label>
    <p
      className="text-light-body-300 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Drop down description",
        }
      }
      data-testid="txt"
    />
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="headlessui-listbox-label-:rq: headlessui-listbox-button-:rr:"
      className="flex h-10 items-center justify-between gap-3 rounded-lg py-2 px-3 hover:cursor-pointer border-light"
      data-headlessui-state=""
      disabled={false}
      id="headlessui-listbox-button-:rr:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <span
        className="w-full line-clamp-1"
      >
        placeholder
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Dropdown Multi Select With Other Option 1`] = `
<div
  className="relative"
>
  <div
    className="space-y-2"
  >
    <label
      className="mr-2 inline uppercase text-bold-body-300"
      data-headlessui-state=""
      data-testid="txt"
      id="headlessui-listbox-label-:ru:"
      onClick={[Function]}
    >
      Drop down label 
    </label>
    <p
      className="text-light-body-300 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Drop down description",
        }
      }
      data-testid="txt"
    />
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="headlessui-listbox-label-:ru: headlessui-listbox-button-:rv:"
      className="flex h-10 items-center justify-between gap-3 rounded-lg py-2 px-3 hover:cursor-pointer border-light"
      data-headlessui-state=""
      disabled={false}
      id="headlessui-listbox-button-:rv:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <span
        className="w-full line-clamp-1"
      >
        placeholder
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Dropdown Single Select 1`] = `
<div
  className="relative"
>
  <div
    className="space-y-2"
  >
    <label
      className="mr-2 inline uppercase text-bold-body-300"
      data-headlessui-state=""
      data-testid="txt"
      id="headlessui-listbox-label-:ro:"
      onClick={[Function]}
    >
      Drop down label 
    </label>
    <p
      className="text-light-body-300 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Drop down description",
        }
      }
      data-testid="txt"
    />
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="headlessui-listbox-label-:ro: headlessui-listbox-button-:rp:"
      className="flex h-10 items-center justify-between gap-3 rounded-lg py-2 px-3 hover:cursor-pointer border-light"
      data-headlessui-state=""
      disabled={false}
      id="headlessui-listbox-button-:rp:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <span
        className="w-full line-clamp-1"
      >
        placeholder
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Dropdown Single Select With Other Option 1`] = `
<div
  className="relative"
>
  <div
    className="space-y-2"
  >
    <label
      className="mr-2 inline uppercase text-bold-body-300"
      data-headlessui-state=""
      data-testid="txt"
      id="headlessui-listbox-label-:rs:"
      onClick={[Function]}
    >
      Drop down label 
    </label>
    <p
      className="text-light-body-300 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Drop down description",
        }
      }
      data-testid="txt"
    />
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="headlessui-listbox-label-:rs: headlessui-listbox-button-:rt:"
      className="flex h-10 items-center justify-between gap-3 rounded-lg py-2 px-3 hover:cursor-pointer border-light"
      data-headlessui-state=""
      disabled={false}
      id="headlessui-listbox-button-:rt:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <span
        className="w-full line-clamp-1"
      >
        placeholder
      </span>
    </div>
  </div>
</div>
`;
